# jch

./: .gitignore  Cargo.toml  README.md  build.rs  notes.md  wrapper.cc  wrapper.hpp
.github/workflows/: build.yaml  manual-build.yml.bak  rust-build.yaml.bak
src/: ch_snd.rs  channel.rs  fn_snd.rs  handler.rs  jsonpath.rs  lib.rs  main.rs  old.rs  parser.rs  plain.rs  rapid.rs  schema.rs  sender.rs  sendpath.rs  shredder.rs  valuer.rs  with_json_stream.rs  wrapper.cc  wrapper.h
