[package]
name = "jch"
version = "0.1.0"
edition = "2021"
default-run = "jch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde = "*"
# serde_json = "*"

countio = "*"
serde_json = "*"
rpds = { version = "1.1", features = ["serde"] }
archery = "*"
serde_yaml = "*"
rmp-serde = "*"
rmp = "*"

# This one didn't do what I want.
# json_stream = {version = "*", git = "https://github.com/alexmaco/json_stream"}
# json_stream = {version = "*", path = "../src/json_stream"}

# to make this point locally, do
# git config --global url."/home/whatwhat/json-event-parser".insteadOf 'https://github.com/oxigraph/json-event-parser.git'
# json-event-parser = {version = "0.2.0", git = "https://github.com/djellemah/json-event-parser.git"}
json-event-parser = {version = "0.2.0", path = "../src/json-event-parser"}
