[package]
name = "jch"
version = "0.1.3"
edition = "2021"
default-run = "jch"

[dependencies]
serde_json = "*"
# see also https://docs.rs/im/latest/im/
rpds = { version = "1.1", features = ["serde"] }
rmp = "0.8.14"

####################
# json parsers
# This one didn't do what I want.
# json_stream = {version = "*", git = "https://github.com/alexmaco/json_stream"}
json-event-parser = {version = "0.2.0"}
crossbeam = "0.8"
rustc-hash = "1.1.0"
cxx = "1.0"
rtrb = "0.3"

[build-dependencies]
cxx-build = "1.0"
